Structure and fixture cleanup complete